@@ -101,6 +101,7 @@ public:
     static bool ParseAsColour(const wxString& str, wxColour *clr);
 
     // Convenience functions:
+    bool GetParamAsString(const wxString& par, wxString *str) const;
     bool GetParamAsColour(const wxString& par, wxColour *clr) const;
     bool GetParamAsInt(const wxString& par, int *clr) const;
     bool GetParamAsIntOrPercent(const wxString& param,
